--- a/src/app/components/housing-location/housing-location.css
+++ b/src/app/components/housing-location/housing-location.css
@@ -14,3 +14,16 @@
   border: 3px solid blue;
   background-color: #e0f0ff;
 }
+
+.listing-img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 8px;
+  margin-bottom: 15px;
+}
+
+.listing-heading {
+  margin: 0;
+  text-align: center;
+}
